# python-template-for-claude-code-cookiecutter

./: .cookiecutterrc  CLAUDE.md  README.md  cookiecutter.json  package-lock.json  pyproject.toml  test_config.json
.github/workflows/: ci.yml
hooks/: post_gen_project.py  pre_gen_project.py
my-python-project/: CLAUDE.md  LICENSE  pyproject.toml
my-python-project/.github/workflows/: ci.yml
my-python-project/tests/property/: __init__.py
scripts/: setup.sh
src/project_name/utils/: logging_config.py
template/src/template_package/: __init__.py
template/src/template_package/core/: example.py
template/src/template_package/utils/: helpers.py  logging_config.py  profiling.py
template/tests/: conftest.py
template/tests/integration/: test_example.py
template/tests/property/: __init__.py  test_helpers_property.py
template/tests/unit/: test_example.py  test_helpers.py  test_logging.py
tests/: test_dummy.py
{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  pyproject.toml
{{ cookiecutter.project_slug }}/.claude/: settings.json
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml
{{ cookiecutter.project_slug }}/docs/: development-patterns.md
{{ cookiecutter.project_slug }}/scripts/: setup.sh
{{ cookiecutter.project_slug }}/tests/: conftest.py  test_dummy.py
{{ cookiecutter.project_slug }}/tests/integration/: test_basic_integration.py
{{ cookiecutter.project_slug }}/tests/property/: test_basic_property.py
{{ cookiecutter.project_slug }}/tests/unit/: test_example.py
